...
 */
@Composable
fun MenuButton(content: @Composable ColumnScope.() -> Unit) {
    var expanded by remember { mutableStateOf(false) }

    Box(modifier = Modifier.wrapContentSize(Alignment.TopStart)) {
        IconButton(onClick = { expanded = true }, modifier = Modifier.testTag("menu-button")) {
            Icon(Icons.Default.MoreHoriz, contentDescription = "More actions", )
        }

        DropdownMenu(
            expanded = expanded,
            onDismissRequest = { expanded = false },
...
