...
                        }
                    },
                    icon = {
                        Icon(
                            if (!isFollowing) Icons.Default.PersonAdd else Icons.Default.PersonRemove,
                            contentDescription = null,
                            modifier = Modifier.testTag("follow-icon")
                        )
                    },
                    red = isFollowing
                )

                if (canLeaveHunt) {
...
