...
    <string name="Cancel">Cancel</string>
    <string name="renaming_bounty_popup_title">Renaming bounty</string>
    <string name="renaming_bounty_placeholder"><![CDATA[<Name of Bounty>]]></string>
    <string name="pick_location_popup_title">Pick a location</string>
    <string name="location_picker_placeholder"><![CDATA[<Select>]]></string>
    <string name="claimed">Claimed</string>
    <string name="leave_the_hunt">Leave the hunt</string>
    <string name="expires">Expires %1$s</string>
    <string name="empty_feed_title">This place is a bit empty.</string>
    <string name="empty_feed_subtitle">You can check for nearby challenges on the map !</string>
    <string name="open_the_map">Open the map</string>

    <plurals name="teams_count">
...
